# monitor-oxc

./: .gitignore  .npmrc  Cargo.toml  README.md  generate.mjs  justfile  matrix.json  metrics.json  npm-rank.js  package.json  pnpm-lock.yaml  rolldown.config.js  tsconfig.json
.github/: renovate.json
.github/workflows/: ci.yml
metrics/: data.js
src/: case.rs  codegen.rs  compressor.rs  dce.rs  driver.rs  dynamic.test.mjs  formatter.rs  formatter_dcr.rs  lib.rs  main.rs  main.test.mjs  mangler.rs  minifier.rs  remove_whitespace.rs  semantic_ids.rs  static.test.mjs  transform.rs  transformer.rs
src/isolated_declarations/: mod.rs  tsc.ts
