[package]
name = "monitor-oxc"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "monitor-oxc"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = false
doctest = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
oxc = { path = "../oxc/crates/oxc", features = ["transformer", "isolated_declarations", "codegen", "minifier"] }
walkdir = "2.5.0"
similar = "2.5.0"
console = "0.15.8"
url     = "2.5.2"
ureq    = "2.9.7"
pico-args = "0.5.0"

[profile.release]
opt-level     = 3
lto           = "thin" # Faster compile time as extreme speed is not needed.
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
