[package]
name = "monitor-oxc"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "monitor-oxc"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = false
doctest = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
oxc = { path = "../oxc/crates/oxc", features = ["full"] }
oxc_formatter = { path = "../oxc/crates/oxc_formatter", features = ["detect_code_removal"] }
walkdir = "2.5.0"
similar = "2.5.0"
console = "0.16.0"
url     = "2.5.2"
ureq    = "3.0.0"
pico-args = "0.5.0"
project-root = "0.2.2"

[profile.dev]
# Disabling debug info reduces stack usage
debug = false

[profile.release]
strip = false # "symbols" # Set to `false` for debug information
debug = true # Set to `true` for debug information
